--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -2,9 +2,7 @@
     margin: 0;
     width: 100%;
     height: 100vh;
-    /* background-color: plum;
-    border-bottom: 1px hidden;
-    border-radius: 0 0 15% 0; Tener en cuenta estos tres para otras secciones*/
+    max-height: 100vh;
 }
 
 .home-container {
@@ -22,7 +20,7 @@
     flex-direction: column;
     width: 60%;
     margin: 0 auto;
-    row-gap: 4em;
+    row-gap: 2em;
 }
 
 .main-info-img {
@@ -67,7 +65,7 @@
 }
 
 #resume {
-    border: 1px solid ;
+    border: 2px solid ;
     border-radius: 10px;
     width: 120px;
     padding: 0.5em 1em;
@@ -75,12 +73,12 @@
     font: var(--font-button1);
     color: var(--text-color1);
     text-align: center;
+    transition: .3s ease-out;
 }
 
 #resume:hover {
     background-color: var(--color2);
     color: var(--text-color2);
-    transition: .3s ease-out;
 }
 
 
@@ -93,7 +91,7 @@
 @media screen and (max-width: 992px) {
     .main-info-img {
         width: 100%;
-        row-gap: 2em;
+        row-gap: 1em;
         flex-direction: column;
     }
 
@@ -204,9 +202,8 @@
         font: var(--font-text-0);
     }
 
-    .cv-socialmedia-container {
-        flex-direction: column;
-        row-gap: 4em;
+    .cv-socialmedia {
+        column-gap: 1.5em;
     }
 
     #resume {
