--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,4 +1,4 @@
-#projects-container {
+#projects {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,7 +8,7 @@
     margin: 10em auto;
 }
 
-#projects-container h1{
+#projects h1{
     font: var(--font-subtitle2);
 }
 
